<resources>
    <string name="app_name">linear View Test</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="text_holder">holder</string>
    <string name="edit">edit</string>
    <string name="there_is_no_items">There is no items!</string>
    <string name="remove_all">Remove all</string>
    <string name="reload">Reload</string>
    <string name="show_custom_page">Show custom page</string>
    <string name="horizental">Horizental</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="orientation">orientation</string>
    <string name="reverse_layout">Reverse Layout</string>
    <string name="book">Book</string>
    <string name="title">Title</string>
    <string name="author">author</string>
    <string name="publisher">Publisher</string>
    <string name="gender">gender</string>
    <string name="music">music</string>
    <string name="team">Team</string>
    <string name="chord">chord</string>
    <string name="chord_type">chord Type</string>
    <string name="instrument">instrument</string>
    <string name="key">key</string>
    <string name="key_type">key type</string>
    <string name="application">application</string>
    <string name="name">name</string>
    <string name="version">version</string>
    <string name="developer">developer</string>
</resources>
