<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.dahatu.apps.linearviewtest.MainActivity">
    <item
            android:id="@+id/action_reload"
            android:orderInCategory="100"
            android:title="@string/reload"
            android:icon="@drawable/ic_refresh_black_24dp"
            app:showAsAction="ifRoom"/>

    <group android:id="@+id/orientation"
           android:checkableBehavior="single">
        <item android:id="@+id/orientation_vertical"
              android:checked="true"
              android:title="@string/vertical"/>
        <item android:id="@+id/orientation_horizontal"
              android:title="@string/horizontal"/>
    </group>


    <item
            android:id="@+id/action_reverse"
            android:orderInCategory="100"
            android:title="@string/reverse_layout"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_custom_page"
            android:orderInCategory="100"
            android:title="@string/show_custom_page"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"/>

</menu>
