<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/music"
                android:textAllCaps="true"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/chord"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/chold"
                    android:text="@string/chord"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/chord_type"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/chord_type"
                    android:text="@string/chord_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/instrument"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/instrument"
                    android:text="@string/instrument"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/key"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/key"
                    android:text="@string/key"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/key_type"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/key_type"
                    android:text="@string/key_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>

