<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/application"
                android:textAllCaps="true"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/name"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/name"
                    android:text="@string/name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/developer"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/developer"
                    android:text="@string/developer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/version"
                    android:textAllCaps="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/version"
                    android:text="@string/version"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

